# STA561-Synthetic_Pest

./: .gitignore  BRANCH_UPDATE.md  CLAUDE.md  CONTRIBUTIONS.md  DCC_DEPLOYMENT.md  DCC_USAGE.md  PROJECT_SPEC.md  README.md  SUBMISSION_DRAFT.md  TEAMWORK.md  infer.py  pyproject.toml  requirements.txt  train_vit.py
assets/pests/: CREDITS.md  README.md
configs/: base.json  dcc_gpu.json  dcc_gpu_smoke.json  local_render_batch_smoke.json
demo/: frames_to_video.py  render_demo.py  to_coco.py  visualize.py
jobs/: convert.sbatch  evaluate.sbatch  pipeline.sbatch  post-render.sbatch  render-batch.sbatch  render.sbatch  sanity-check.sbatch  train-yolo.sbatch  train.sbatch
notebooks/: dcc_pipeline_demo.ipynb
scripts/: dcc_submit.sh
src/prob_ml/: __init__.py  cli.py  config.py  dataset.py  dcc.py  detector.py  evaluate.py  infer.py  layout.py  manifest.py  paths.py  pipeline.py  preview.py  render.py  sanity.py  train.py  video.py  yolo.py
src/prob_ml/blender/: __init__.py  render_scene.py
submission/: README.md  executive_summary.md  faq.md  technical_appendix.md
submission/results/: README.md
submission/results/reports/: dataset_sanity_report.json  dataset_summary.json  detector_evaluation_report.json  training_report.json
tests/: test_cli.py  test_dataset.py  test_detector.py  test_layout.py  test_manifest.py  test_sanity.py  test_video.py
